--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2024"
 [dependencies]
 colored = "2.0"
 rand = "0.9"
+rand_distr = "0.5"
+rayon = "1.7"
+serde = { version = "1.0", features = ["derive"] }
+bincode = "1.3"
